--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html, body {
 }
 
 .main-nav {
-   /* position: fixed; */
     padding: 60px 20px 20px 40px;
     font-family: 'Quicksand', sans-serif;;
     font-weight: 500;
@@ -19,6 +18,8 @@ html, body {
     background-color: lightgray;
     border-bottom: 4px solid darkgrey;
     opacity: 0.7;
+    position: sticky;
+    top: 0;
 }
 
 .nav-list {
@@ -69,6 +70,26 @@ li {
     margin-top: 100px;
     margin-left:100px;
     border-radius: 50%;
+}
+
+.about-pg {
+    font-family: 'Quicksand', sans-serif;
+    width: 100%;
+    height: 30%;
+    background-color: lightcyan;
+    opacity: 0.4;
+    position: relative;
+}
+
+.about-tucson {
+    font-family: 'Quicksand', sans-serif;
+    width: 100%;
+    height: 30%;
+    background-image: url(https://wikitravel.org/upload/shared//a/af/Tucson_Banner.jpg);
+    opacity: 0.6;
+    padding-top: 20px;
+    padding-bottom: 46px;
+    position: relative;
 }
 
 .foot-main {
